--- a/login.html
+++ b/login.html
@@ -398,9 +398,9 @@ function renderLoggedIn(email) {
   `;
 
   document.getElementById("logout").onclick = async () => {
-    await supabase.auth.signOut();
-    renderLoggedOut(); // Switch UI immediately — don't wait for onAuthStateChange
-  };
+  await supabase.auth.signOut();
+  window.location.href = "index.html"; // full redirect, clears all state
+};
 }
 
 async function upsertProfileIfPending(userId) {
